--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_URL = http://localhost:3000
+REACT_APP_URL = media-building-next.vercel.app
 APP_SERVER_URL = https://outstanding-lamb-life-jacket.cyclic.app
 REACT_APP_ENV = development
