--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# REACT_APP_URL = http://localhost:3000
+REACT_APP_URL = http://localhost:3000
 APP_SERVER_URL = https://weak-plum-basket-clam-cape.cyclic.app
 REACT_APP_ENV = development
