--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_URL = http://localhost:3000
-APP_SERVER_URL = http://localhost:4200
+REACT_APP_URL = http://82.97.243.54:3000
+APP_SERVER_URL = http://82.97.243.54:4200
 REACT_APP_ENV = production
 
 GOOGLE_CLIENT_ID = 763769822735-90bk0cd8bq3p8hk2ikiianj0si5abefi.apps.googleusercontent.com
-GOOGLE_REDIRECT_URI = http://localhost:3000/google-auth
+GOOGLE_REDIRECT_URI = http://82.97.243.54:3000/google-auth
