--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "front",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
-    "@tanstack/react-query": "^5.8.4",
-    "axios": "^1.6.2",
-    "draft-js": "^0.11.7",
-    "draftjs-to-html": "^0.9.1",
-    "html-to-draftjs": "^1.5.0",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.303.0",
-    "next": "14.0.4",
-    "prop-types": "^15.8.1",
-    "react": "^18",
-    "react-color-palette": "^7.1.0",
-    "react-dom": "^18",
-    "react-draft-wysiwyg": "^1.15.0",
-    "react-hook-form": "^7.48.2",
-    "react-redux": "^9.0.4",
-    "react-redux-toastr": "^7.6.13",
-    "react-select": "^5.8.0",
-    "redux-persist": "^6.0.0",
-    "sass": "^1.69.5",
-    "sharp": "^0.33.1",
-    "string-strip-html": "^13.4.3"
-  },
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/draft-js": "^0.11.16",
-    "@types/draftjs-to-html": "^0.8.4",
-    "@types/html-to-draftjs": "^1.4.3",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-draft-wysiwyg": "^1.13.7",
-    "@types/react-redux-toastr": "^7.6.5",
-    "@types/react-select": "^5.0.1",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+	"name": "front",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start --hostname 82.97.243.54 -p 3000",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^2.0.1",
+		"@tanstack/react-query": "^5.8.4",
+		"axios": "^1.6.2",
+		"draft-js": "^0.11.7",
+		"draftjs-to-html": "^0.9.1",
+		"html-to-draftjs": "^1.5.0",
+		"js-cookie": "^3.0.5",
+		"lucide-react": "^0.303.0",
+		"next": "14.0.4",
+		"prop-types": "^15.8.1",
+		"react": "^18",
+		"react-color-palette": "^7.1.0",
+		"react-dom": "^18",
+		"react-draft-wysiwyg": "^1.15.0",
+		"react-hook-form": "^7.48.2",
+		"react-redux": "^9.0.4",
+		"react-redux-toastr": "^7.6.13",
+		"react-select": "^5.8.0",
+		"redux-persist": "^6.0.0",
+		"sass": "^1.69.5",
+		"sharp": "^0.33.1",
+		"string-strip-html": "^13.4.3"
+	},
+	"devDependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/draft-js": "^0.11.16",
+		"@types/draftjs-to-html": "^0.8.4",
+		"@types/html-to-draftjs": "^1.4.3",
+		"@types/js-cookie": "^3.0.6",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@types/react-draft-wysiwyg": "^1.13.7",
+		"@types/react-redux-toastr": "^7.6.5",
+		"@types/react-select": "^5.0.1",
+		"autoprefixer": "^10.0.1",
+		"postcss": "^8",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
