--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start --hostname 82.97.243.54 -p 3000",
+		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.0.1",
 		"@tanstack/react-query": "^5.8.4",
+		"add": "^2.0.6",
 		"axios": "^1.6.2",
 		"draft-js": "^0.11.7",
 		"draftjs-to-html": "^0.9.1",
@@ -24,13 +25,14 @@
 		"react-dom": "^18",
 		"react-draft-wysiwyg": "^1.15.0",
 		"react-hook-form": "^7.48.2",
+		"react-hot-toast": "^2.4.1",
 		"react-redux": "^9.0.4",
-		"react-redux-toastr": "^7.6.13",
 		"react-select": "^5.8.0",
 		"redux-persist": "^6.0.0",
 		"sass": "^1.69.5",
 		"sharp": "^0.33.1",
-		"string-strip-html": "^13.4.3"
+		"string-strip-html": "^13.4.3",
+		"yarn": "^1.22.21"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -42,7 +44,6 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"@types/react-draft-wysiwyg": "^1.13.7",
-		"@types/react-redux-toastr": "^7.6.5",
 		"@types/react-select": "^5.0.1",
 		"autoprefixer": "^10.0.1",
 		"postcss": "^8",
