--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+# REACT_APP_URL = http://82.97.243.54:3000
+# APP_SERVER_URL = http://82.97.243.54:4200
 REACT_APP_URL = http://82.97.243.54:3000
 APP_SERVER_URL = http://82.97.243.54:4200
 REACT_APP_ENV = production
