--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-draft-wysiwyg": "^1.15.0",
 		"react-hook-form": "^7.48.2",
 		"react-hot-toast": "^2.4.1",
+		"react-player": "^2.14.1",
 		"react-redux": "^9.0.4",
 		"react-select": "^5.8.0",
 		"redux-persist": "^6.0.0",
