--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-# REACT_APP_URL = http://82.97.243.54:3000
-# APP_SERVER_URL = http://82.97.243.54:4200
-REACT_APP_URL = http://82.97.243.54:3000
-APP_SERVER_URL = http://82.97.243.54:4200
+REACT_APP_URL = https://media-building.ru
+APP_SERVER_URL = https://back.media-building.ru
 REACT_APP_ENV = production
 
 GOOGLE_CLIENT_ID = 763769822735-90bk0cd8bq3p8hk2ikiianj0si5abefi.apps.googleusercontent.com
-GOOGLE_REDIRECT_URI = http://82.97.243.54:3000/google-auth
+GOOGLE_REDIRECT_URI = https://media-building.ru/google-auth
